--- a/Rubidium/res/layout/fragment_main.xml
+++ b/Rubidium/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.laser.rubidium.RubidiumFragment" >
+    tools:context="org.laser.rubidium.fragments.RubidiumFragment" >
 
     <TextView
         android:id="@+id/section_label"
