--- a/Rubidium/res/menu/global.xml
+++ b/Rubidium/res/menu/global.xml
@@ -2,9 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_help"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_help"
         app:showAsAction="never"/>
-
+    <item
+        android:id="@+id/action_about"
+        android:title="@string/action_about"
+        app:showAsAction="never"/>
+    
 </menu>
