--- a/Rubidium/res/menu/main.xml
+++ b/Rubidium/res/menu/main.xml
@@ -4,13 +4,8 @@
     tools:context="org.laser.rubidium.MainActivity" >
 
     <item
-        android:id="@+id/action_example"
-        android:title="@string/action_example"
-        app:showAsAction="withText|ifRoom"/>
-    <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_help"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_help"
         app:showAsAction="never"/>
-
 </menu>
